# jivas

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  CHANGELOG.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor-request.md
.github/workflows/: coverage-jivas.yaml  coverage-jvcli.yaml  pre-commit.yaml  release-jivas.yaml  release-jvcli.yaml  release-jvclient.yaml  release-jvmanager.yaml  release-jvserve.yaml  release-packages.yaml  test-jivas.yaml  test-jvcli.yaml  test-jvclient.yaml  test-jvserve.yaml  update-ts-messenger.yml
actions/: README.md
core/: globals.jac  setup.py
core/jivas/: __init__.py
core/jivas/agent/: lib.jac
daf/: README.md
docker/: README.md  entrypoint.sh  jivas.Dockerfile  supervisord.conf
jivas/: __init__.py  cli.py
jivas/agent/: lib.jac
jivas/cli/: __init__.py
jivas/plugin/: __init__.py  cli.py
jvcli/: README.md  setup.py
jvcli/jvcli/: __init__.py  cli.py  utils.py
jvcli/tests/: test_cli.py  test_client.py  test_create.py  test_graph.py  test_startproject.py
jvclient/: setup.py
jvclient/jvclient/: __init__.py
jvclient/tests/: test_jvclient_utils.py  test_utils.py
jvmanager/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  react-router.config.ts  setup.py
jvmanager/app/: root.tsx  routes.ts
jvmanager/jvmanager/: __init__.py  group.py
jvmanager/tests/: test_jvgraph.py
jvserve/: setup.py  test.jac
jvserve/jvserve/: __init__.py  cli.py
jvserve/tests/: test_jvserve.py
tests/plugin/: test_info.py
(+190 files in other folders)
