[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jivas"
version = "2.1.0"
description = "JIVAS is an Agentic Framework for rapidly prototyping and deploying graph-based, AI solutions."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache License 2.0"}
authors = [
    {name = "TrueSelph Inc.", email = "admin@trueselph.com"},
]
keywords=["jivas"]